Fix button alignment in guest mode

--- a/ui/component/claimPreview/style.scss
+++ b/ui/component/claimPreview/style.scss
@@ -749,22 +749,6 @@
 
   .claim-preview__text {
     overflow: hidden;
-
-    .claim-preview__actions {
-      .button-group {
-        .button {
-          margin-top: 0;
-          .button__content {
-            align-items: center !important;
-            margin-top: 0;
-            .button__label {
-              font-size: var(--font-body);
-              margin-top: 2px;
-            }
-          }
-        }
-      }
-    }
   }
 
   @media (any-pointer: fine) {
